# parsers

./: .gitignore  README.md  pyproject.toml
extractors/: __init__.py  category-test.py  category.py  email-test.py  email.py  extractors-test.py  extractors.py  freelancer-test.py  freelancer.py  language-test.py  language.py  match.py  nondev-test.py  nondev.py  phone-test.py  phone.py  student-test.py  student.py  utils.py  web-test.py  web.py
parsers/: __init__.py  parsers-test.py  parsers.py  web-test.py  web.py
