[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false

[tool.ruff.lint]
ignore = ["E701", "E741"]

[tool.poetry]
package-mode = true
name = "parsers"
version = "0.1.2"
description = ""
authors = ["DevScanr team <info@devscanr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
pytest-describe = "^2.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
ruff = "^0.6.3"

[tool.poe.env]
PYTHONPATH = "."

[tool.poe.tasks]
build = "poetry build --format=wheel"
typecheck = "poetry run mypy --enable-incomplete-feature=NewGenericSyntax ."
test = "poetry run pytest --disable-warnings"
lint = "poetry run ruff check"

[tool.pytest.ini_options]
python_files = "*-test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
