[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_calls = false
no_implicit_reexport = false

[tool.ruff.lint]
ignore = ["E701", "E741"]

[tool.poetry]
package-mode = true
name = "extractors"
version = "0.4.0"
description = ""
authors = ["DevScanr team <info@devscanr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
pytest-describe = "^2.2.0"
html2text = "^2024.2.26"
emoji = "^2.13.2"
markdown = "^3.7"
spacy = "^3.8.2"
# lingua-language-detector = "^2.0.2"
# jupyterlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.2"
ruff = "^0.6.3"
types-markdown = "^3.7.0.20240822"

[tool.poe.env]
PYTHONPATH = "."

[tool.poe.tasks]
build = "poetry build --format=wheel"
typecheck = "poetry run mypy --enable-incomplete-feature=NewGenericSyntax ."
test = "poetry run pytest --disable-warnings"
lint = "poetry run ruff check"

[tool.pytest.ini_options]
python_files = "*-test.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
